--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -1,4 +1,4 @@
-\documentclass{cmuthesis}
+\documentclass[12pt]{cmuthesis}
 \usepackage{fullpage}
 \usepackage[
   backref,pageanchor=true,plainpages=false, pdfpagelabels, bookmarks,bookmarksnumbered
@@ -10,7 +10,7 @@
 \usepackage{wasysym}
 \usepackage{subfigure}
 \usepackage[numbers,sort]{natbib}
-%\usepackage[letterpaper,twoside,vscale=.8,hscale=.75,nomarginpar,hmarginratio=1:1]{geometry}
+\usepackage[letterpaper,twoside,vscale=.8,hscale=.75,nomarginpar,hmarginratio=1:1]{geometry}
 
 \draftstamp{\today}{DRAFT}
 
