--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -9,6 +9,7 @@
 \usepackage{amsmath}
 \usepackage{wasysym}
 \usepackage{subfigure}
+\usepackage{enumitem}
 \usepackage[numbers,sort]{natbib}
 \usepackage[letterpaper,twoside,vscale=.8,hscale=.75,nomarginpar,hmarginratio=1:1]{geometry}
 
@@ -44,8 +45,8 @@ Lujo Bauer \\
 Manuel Egele, Boston University 
 }
 
-\support{}
-\disclaimer{}
+%\support{}
+%\disclaimer{}
 
 \keywords{binary analysis, logic programming}
 \maketitle
